--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -14,16 +14,19 @@
         <span class="mask bg-gradient-dark opacity-6"></span>
       </div>
       <div class="card card-body mx-3 mx-md-4 mt-n6">
-        <h3 class="text-center">Update Profile</h3>
-        <form role="form" id="contact-form" method="post" autocomplete="off">
-          {% csrf_token %}
-          {{ form }}
-          <div class="col-md-12">
-            <button type="submit" class="btn bg-gradient-dark w-100">Update Profile</button>
+        <div class="row gx-4 mb-2">
+          <div class="col-auto">
+            <h3 class="text-center">Update Profile</h3>
+            <form role="form" id="contact-form" method="post" autocomplete="off">
+              {% csrf_token %}
+              {{ form }}
+              <div class="col-md-12">
+                <button type="submit" class="btn bg-gradient-dark w-100">Update Profile</button>
+              </div>
+            </form>
           </div>
-        </form>
+        </div>
       </div>
-    </div>
 
     {% include 'includes/django-material-dashboard/footer.html' %}
   </div>
