--- a/frontend/templates/home/django-material-dashboard/sample-label-detail.html
+++ b/frontend/templates/home/django-material-dashboard/sample-label-detail.html
@@ -13,9 +13,11 @@
            style="background-image: url('https://images.unsplash.com/photo-1533084417605-e538a510d50a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80');">
         <span class="mask bg-gradient-dark opacity-6"></span>
     </div>
-    <div class="row min-vh-80 h-100">
-      <div class="col-12">
-        NEW CONTENT HERE
+    <div class="card card-body mx-3 mx-md-4 mt-n6">
+      <div class="row min-vh-80 h-100">
+        <div class="col-12">
+          <h3 class="text-center">Sample Label Detail</h3>
+        </div>
       </div>
     </div>
 
