--- a/frontend/templates/home/django-material-dashboard/profile.html
+++ b/frontend/templates/home/django-material-dashboard/profile.html
@@ -17,7 +17,11 @@
         <div class="row gx-4 mb-2">
           <div class="col-auto">
             <div class="avatar avatar-xl position-relative">
+              {% if object.profile_image_url %}
               <img src="{{ object.profile_image_url }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+              {% else %}
+              <img src="https://github.com/google/material-design-icons/blob/master/png/social/sentiment_satisfied/materialiconsoutlined/48dp/2x/outline_sentiment_satisfied_black_48dp.png" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+              {% endif %}
             </div>
           </div>
           <div class="col-auto my-auto">
