--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -29,7 +29,8 @@
           </li>
             {% if perms.field_site.view_fieldsite %}
             <li class="nav-item">
-              <a class="nav-link text-white {% if 'view_fieldsite' in segment or 'detail_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'view_fieldsite' %}">
+              <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_fieldsite' in segment or 'detail_fieldsite' in segment %} active bg-gradient-primary {% endif %}"
+                 href="{% url 'view_fieldsite' %}">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">table_view</i>
                 </div>
@@ -39,7 +40,7 @@
             {% endif %}
             {% if perms.field_site.add_fieldsite %}
             <li class="nav-item">
-              <a class="nav-link text-white {% if 'add_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'add_fieldsite' %}">
+              <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'add_fieldsite' %}">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">add_box</i>
                 </div>
