--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -24,27 +24,26 @@
         {% if perms.field_site %}
           <!-- begin field site -->
       <ul class="nav nav-fill p-1" role="tablist">
-          <li class="nav-item mt-3">
+          <li class="nav-item mt-2">
             <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
           </li>
             {% if perms.field_site.view_fieldsite %}
             <li class="nav-item">
               <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_fieldsite' in segment or 'detail_fieldsite' in segment %} active bg-gradient-primary {% endif %}"
-                 href="{% url 'view_fieldsite' %}">
+                 href="{% url 'view_fieldsite' %}" data-bs-toggle="tooltip" data-bs-placement="bottom" title="View">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">table_view</i>
                 </div>
-                <h8 class="nav-link-text ms-1 text-uppercase text-xs text-white font-weight-bolder opacity-8">View</h8>
               </a>
             </li>
             {% endif %}
             {% if perms.field_site.add_fieldsite %}
             <li class="nav-item">
-              <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'add_fieldsite' %}">
+              <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_fieldsite' in segment %} active bg-gradient-primary {% endif %}"
+                 href="{% url 'add_fieldsite' %}" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Add">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">add_box</i>
                 </div>
-                <h8 class="nav-link-text ms-1 text-uppercase text-xs text-white font-weight-bolder opacity-8">Add</h8>
               </a>
             </li>
             {% endif %}
