--- a/frontend/templates/account/password_reset.html
+++ b/frontend/templates/account/password_reset.html
@@ -37,7 +37,7 @@
               {% endif %}
               {% if form.errors and not form.non_field_errors %}
               <!-- begin errors -->
-              <div class="alert alert-secondary text-white font-weight-bold" role="alert">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</div>
+              <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
               {% endif %}
               </p>
             </div>
